<resources>
    <string name="app_name">My CV</string>
    <string name="amazon">AMAZON</string>
    <string name="united_states">UNITED STATES</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End date</string>
    <string name="education">education</string>
    <string name="experience">experience</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fullname">Fullname</string>
    <string name="next">next</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="e_mail">E-Mail</string>
    <string name="age">Age</string>
    <string name="skills">SKILLS</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="hobbies">Hobbies</string>
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="games">Games</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="flutter">Flutter</string>
    <string name="submit">submit</string>
    <string name="info">Info</string>
    <string name="my_career">My career</string>
    <string name="description">Par défaut, le fragment « EXPERIENCE »
s’affiche dans la partie réserver des
fragments avec un RecyclerView qui gère
les expériences avec une liste de données
statique.</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="add_experience">Add Experience</string>
    <string name="add_education">Add Education</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="save">save</string>
    <string name="logout_canceled">Logout Canceled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>

    <string name="must_not_be_empty">Must not be empty !</string>
    <string name="name">Name</string>
    <string name="create_your_resume">Create your resume</string>
    <string name="your_resume">Your Resume</string>
    <string name="your_career">Your Career</string>

</resources>