<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateResume">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/layout_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/skills"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/android"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seek_android"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="7"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/ios"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seek_ios"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:layout_weight="7"
                    android:max="100" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:text="@string/flutter"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/seek_flutter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="7"
                    android:max="100" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/layout_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_Language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/language"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/check_french"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/french"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/check_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/layout_border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_hobbies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hobbies"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/check_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sport"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/check_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/games"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_createResume_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/submit" />

        <CheckBox
            android:id="@+id/check_rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>