<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentLanguage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/check_french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/french"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/check_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>