<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentHobbies">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/layout_border"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hobbies"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/check_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/check_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>