<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_experience"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_logo_amazon" />

        <TextView
            android:id="@+id/txt_companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazon"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_companyAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/united_states"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/united_states"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/img_experience"/>

        <TextView
            android:id="@+id/txt_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/united_states"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_below="@+id/img_experience"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/txt_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_below="@+id/txt_startDate"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>